test/fail/integration/_fail_grammar_if_block_imper_4.hs
main = if 1 then print "hello" else print "hello"